[package]
name = "sd-drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
mouse_automation = "0.1.3"
hidapi = "1.4.2"
keymapper = { git = "https://github.com/willthehuman/keymapper", branch = "master" }
tokio = { version = "1.13.0", features = ["full"] }